# dtd-verifier

./: LICENSE  README.md  dtd-verifier.cabal
src/Automata/: CFG.hs  DTD.hs  PDA.hs
src/Verifier/: Driver.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  Tests.hs
tests/: AddressBook.dtd  AddressBook_invalid.xml  AddressBook_ok.xml  PCs.dtd  PCs.xml  Shop.dtd  Shop_ok.xml  TestDTD.dtd  TestXML_invalid.xml  TestXML_ok.xml  Vuln.dtd  Vuln_invalid.xml  Vuln_ok.xml  basic.dtd  simple.dtd  simple.xml  task.dtd  task.xml
