name:                dtd-verifier
version:             0.1.0.0
synopsis:            DTD verifier
license:             BSD3
license-file:        LICENSE
author:              davnils
maintainer:          davd@localhost
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Automata.CFG, Automata.DTD, Automata.PDA
  build-depends:       base >=4.4,
                       recursion-schemes >=4.0,
                       containers >=0.5,
                       semigroups >=0.12
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010

executable dtd-verify
  main-is:             Verifier/Driver.hs
  other-modules:       Verifier.Lexer, Verifier.Parser
  build-depends:       array >= 0.4,
                       base >= 4.4,
                       containers >= 0.5,
                       recursion-schemes >= 3.0,
                       semigroups >= 0.12
  hs-source-dirs:      src
  build-tools:         alex, happy
  default-language:    Haskell2010
